Nov. 30th commit

--- a/mdn_clone/css/style.css
+++ b/mdn_clone/css/style.css
@@ -32,7 +32,7 @@ h3 {
 /* settings */
 @media screen and (max-width: 1200px) {
   .scnd-header-content .mdn-title {
-    color: red;
+    display: block;
   }
 }
 
